--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
       <nav class="nav-bar">
         <ul>
           <li><a href="./index.html">Home</a></li>
-          <li><a href="./about.html">About</a></li>
           <li><a href="./project.html">Project</a></li>
-          <li><a href="./contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -32,16 +30,20 @@
 
       <section class="right-section">
         <div>
-          <h3>About Me</h3>
+          <h4>About Me</h4>
           <p>
-            Passionate software engineering. Fascinated about Network
-            Engineering, Database Engineering...
+            In 2022, I kickstarted my software engineering journey with a
+            Backend Engineering Diploma at AltSchool Africa, where my passion
+            was further ignited. I furthered my education at ALU due to its
+            diverse opportunities and connections with students from across
+            Africa. My primary interests lie in Backend and Network Engineering,
+            as they are pivotal in resilient software systems.
           </p>
-          <a class="learn-more" href="./about.html">LEARN MORE...</a>
+          <!-- <a class="learn-more" href="./about.html">LEARN MORE...</a> -->
         </div>
         <hr />
         <div>
-          <h3>Projects</h3>
+          <h4>Projects</h4>
           <p>
             I have done a number of projects, ranging from Rest API to Chat APP,
             also a productivity tool I call Maestro. It helps to improve my
@@ -51,7 +53,7 @@
         </div>
         <hr />
         <div class="socials">
-          <h3>FOLLOW ME</h3>
+          <h4>CONTACT ME</h4>
           <div class="icons">
             <a href="https://twitter.com/ssam_dev">
               <img src="./images/x.svg" alt="twitter" />
@@ -61,6 +63,9 @@
             </a>
             <a href="https://www.github.com/SundayOlubode">
               <img src="./images/github.svg" alt="github" />
+            </a>
+            <a href="mailto:s.olubode@alustudent.com">
+              <img src="./images/gmail.svg" alt="Gmail" />
             </a>
           </div>
         </div>
