--- a/project.html
+++ b/project.html
@@ -4,18 +4,68 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sam | Projects</title>
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./project.css" />
   </head>
   <body>
     <header>
       <nav>
         <ul>
           <li><a href="./index.html">Home</a></li>
-          <li><a href="./about.html">About</a></li>
           <li><a href="./project.html">Project</a></li>
-          <li><a href="./contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
+    <main>
+      <h1>Projects</h1>
+      <div class="projects">
+        <div class="project">
+          <p class="date">September, 2023</p>
+          <h2>
+            Maestro
+            <span
+              ><a href="https://www.github.com/SundayOlubode/ChatBot"
+                ><img src="./images/arrowhead.svg" alt="Arrow-head" /></a
+            ></span>
+          </h2>
+          <p>A tool that helps to master improve one's surface lexicon</p>
+        </div>
+        <div class="project">
+          <p class="date">March, 2023</p>
+          <h2>
+            A Social Media API
+            <span
+              ><a href="https://www.github.com/SundayOlubode/ChatBot"
+                ><img src="./images/arrowhead.svg" alt="Arrow-head" /></a
+            ></span>
+          </h2>
+          <p>A Social Media API specifically for Developers to interact</p>
+        </div>
+
+        <div class="project">
+          <p class="date">June, 2023</p>
+          <h2>
+            ChatBot
+            <span
+              ><a href="https://www.github.com/SundayOlubode/ChatBot"
+                ><img src="./images/arrowhead.svg" alt="Arrow-head" /></a
+            ></span>
+          </h2>
+          <p>A tool that helps to master improve one's surface lexicon</p>
+        </div>
+        <div class="project">
+          <p class="date">March, 2023</p>
+          <h2>
+            Donation API
+            <span
+              ><a href="https://www.github.com/SundayOlubode/ChatBot"
+                ><img src="./images/arrowhead.svg" alt="Arrow-head" /></a
+            ></span>
+          </h2>
+          <p>
+            A web API keeps a transparent log for a community of individuals
+          </p>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
