chore: add text

--- a/project.html
+++ b/project.html
@@ -23,18 +23,21 @@
           <h2>
             Maestro
             <span
-              ><a href="https://www.github.com/SundayOlubode/ChatBot"
+              ><a href="https://www.github.com/SundayOlubode/maestro"
                 ><img src="./images/arrowhead.svg" alt="Arrow-head" /></a
             ></span>
           </h2>
-          <p>A tool that helps to master improve one's surface lexicon</p>
+          <p>
+            Maestro helps users to readily access their vocabulary without the
+            need for extensive searches when communicating.
+          </p>
         </div>
         <div class="project">
-          <p class="date">March, 2023</p>
+          <p class="date">May, 2023</p>
           <h2>
             A Social Media API
             <span
-              ><a href="https://www.github.com/SundayOlubode/ChatBot"
+              ><a href="https://www.github.com/SundayOlubode/social-media-app"
                 ><img src="./images/arrowhead.svg" alt="Arrow-head" /></a
             ></span>
           </h2>
@@ -42,27 +45,30 @@
         </div>
 
         <div class="project">
-          <p class="date">June, 2023</p>
+          <p class="date">July, 2023</p>
           <h2>
-            ChatBot
+            Scissor: URL Shortner
             <span
-              ><a href="https://www.github.com/SundayOlubode/ChatBot"
+              ><a href="https://www.github.com/SundayOlubode/scissor"
                 ><img src="./images/arrowhead.svg" alt="Arrow-head" /></a
             ></span>
           </h2>
-          <p>A tool that helps to master improve one's surface lexicon</p>
+          <p>
+            The API creates 7-character short URLs for lengthy web addresses.
+          </p>
         </div>
         <div class="project">
           <p class="date">March, 2023</p>
           <h2>
             Donation API
             <span
-              ><a href="https://www.github.com/SundayOlubode/ChatBot"
+              ><a href="https://www.github.com/SundayOlubode/donation-api-v2"
                 ><img src="./images/arrowhead.svg" alt="Arrow-head" /></a
             ></span>
           </h2>
           <p>
-            A web API keeps a transparent log for a community of individuals
+            A web application keeps a transparent and analytical donation log
+            for a community of individuals.
           </p>
         </div>
       </div>
