--- a/project.html
+++ b/project.html
@@ -19,17 +19,19 @@
       <h1>Projects</h1>
       <div class="projects">
         <div class="project">
-          <p class="date">September, 2023</p>
+          <p class="date">October, 2023</p>
           <h2>
-            Maestro
+            PickBazar API Database Integration
             <span
-              ><a href="https://www.github.com/SundayOlubode/maestro"
+              ><a href=""
                 ><img src="./images/arrowhead.svg" alt="Arrow-head" /></a
             ></span>
           </h2>
           <p>
-            Maestro helps users to readily access their vocabulary without the
-            need for extensive searches when communicating.
+            Integrated database functionality into the PickBazar API template, a
+            renowned e-commerce API, and developed scripts to automate data
+            seeding while resetting the primary key sequence values for
+            efficient database management.
           </p>
         </div>
         <div class="project">
