--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <a href="https://www.github.com/SundayOlubode">
               <img src="./images/github.svg" alt="github" />
             </a>
-            <a href="mailto:s.olubode@alustudent.com">
+            <a href="mailto:ssamuelolubode@gmail.com">
               <img src="./images/gmail.svg" alt="Gmail" />
             </a>
           </div>
