--- a/project.html
+++ b/project.html
@@ -23,7 +23,7 @@
           <h2>
             PickBazar API Database Integration
             <span
-              ><a href=""
+              ><a href="https://github.com/SundayOlubode/PickBazar"
                 ><img src="./images/arrowhead.svg" alt="Arrow-head" /></a
             ></span>
           </h2>
